@@ -19,17 +19,17 @@ class PyQtConfiguration(Hook):
              "previous_statistics_page": 0,
              "previous_configuration_wdgt": 0,
              "previous_variant_for_statistics_page": {}, # dict[page] = variant
-             "main_window_size": (0, 0),
+             "main_window_state": None,
              "add_cards_dlg_state": None,
-             "edit_widget_size": (0, 0),
+             "edit_dlg_state": None,
              "plugins_dlg_state": None,
              "clone_help_shown": False,
              "browse_cards_dlg_state": None,
              "browse_cards_dlg_splitter_1_state": None,
              "browse_cards_dlg_splitter_2_state": None,
              "browse_cards_dlg_table_settings": None,   
-             "statistics_dlg_size": (0, 0),
-             "configuration_dlg_size": (0, 0),
+             "statistics_dlg_state": None,
+             "configuration_dlg_state": None,
              "activate_cards_dlg_state": None,
              "activate_cards_dlg_splitter_state": None,           
              "sync_help_shown": False,
