@@ -2,7 +2,7 @@
 # configuration_dlg.py <Peter.Bienstman@UGent.be>
 #
 
-from PyQt4 import QtGui
+from PyQt4 import QtCore, QtGui
 
 from mnemosyne.libmnemosyne.translator import _
 from mnemosyne.pyqt_ui.ui_configuration_dlg import Ui_ConfigurationDlg
@@ -20,6 +20,10 @@ class ConfigurationDlg(QtGui.QDialog, Ui_ConfigurationDlg, ConfigurationDialog):
         ConfigurationDialog.__init__(self, component_manager)
         QtGui.QDialog.__init__(self, self.main_widget())
         self.setupUi(self)
+        self.setWindowFlags(self.windowFlags() \
+            | QtCore.Qt.WindowMinMaxButtonsHint)
+        self.setWindowFlags(self.windowFlags() \
+            & ~ QtCore.Qt.WindowContextHelpButtonHint)        
         for widget in self.component_manager.all("configuration_widget"):
             widget = widget(self.component_manager, parent=self)
             self.tab_widget.addTab(widget, widget.name)
@@ -30,22 +34,26 @@ class ConfigurationDlg(QtGui.QDialog, Ui_ConfigurationDlg, ConfigurationDialog):
             self.config()["previous_configuration_wdgt"] = 0
         self.tab_widget.setCurrentIndex(widget_index)
         self.ok_button.setFocus()
-        width, height = self.config()["configuration_dlg_size"]
-        if width:
-            self.resize(width, height)
+        state = self.config()["configuration_dlg_state"]
+        if state:
+            self.restoreGeometry(state)
             
     def activate(self):
         self.exec_()
 
+    def _store_state(self):
+        self.config()["configuration_dlg_state"] = self.saveGeometry()
+
     def closeEvent(self, event):
-        self.config()["configuration_dlg_size"] = (self.width(), self.height())
+        # Generated when clicking the window's close button.
+        self._store_state()
         
     def accept(self):
         self.config()["previous_configuration_wdgt"] = \
             self.tab_widget.currentIndex()
         for index in range(self.tab_widget.count()):
             self.tab_widget.widget(index).apply()
-        self.config()["configuration_dlg_size"] = (self.width(), self.height())
+        self._store_state()
         return QtGui.QDialog.accept(self)
     
     def reset_to_defaults(self):
